--- a/DemostracionesPRYE/DistContinuas.tex
+++ b/DemostracionesPRYE/DistContinuas.tex
@@ -5,7 +5,8 @@ en esta sección se asumirá como $\R$. De no ser especificado
 el valor de una función de densidad en algún subconjunto de $\R$,
 este se asumirá como $0$.
 \input{Continuas/Normal.tex}
-\input{Continuas/Chi_cuadrada.tex}
-\input{Continuas/F_dist.tex}
 \input{Continuas/Gamma.tex}
+\input{Continuas/Chi_cuadrada.tex}
+\input{Continuas/T_dist.tex}
+\input{Continuas/F_dist.tex}
 \input{Continuas/Weibull.tex}
